<resources>
    <string name="app_name">AUTISM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_dont_have_account">You dont have account ?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="type">Type</string>
    <string name="trainer">Trainer</string>
    <string name="parent">Parent</string>
    <string name="next">Next</string>
    <string name="speciality">Speciality</string>
    <string name="collage">Collage</string>
    <string name="previous_clinics">Previous Clinics</string>
    <string name="clinic_address">Clinic address</string>
    <string name="experience_years">Experience years</string>
    <string name="certificate_number">Certificate number</string>
    <string name="i_have_read_and_agree_the_term_conditions"><![CDATA[I have read and agree the Term & Conditions]]></string>
    <string name="child_name">Child name</string>
    <string name="chile_age">Child age</string>
    <string name="parent_gender">Parent gender</string>
    <string name="parent_job">Parent job</string>
    <string name="child_main_problem">Child main problem</string>
    <string name="child_number">Child number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="approve_conditions_first">You have to agree term and conditions first</string>
    <string name="marriage_status">Marriage status</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="phone">Phone  : </string>
    <string name="email">Email  : </string>
    <string name="employee_id">Emplyee ID :</string>
    <string name="birth_date">Birth date :</string>
    <string name="address">Address :</string>
    <string name="gender">Gender :</string>
    <string name="specialization">Specialization :</string>
    <string name="avaliable_time">Available Time :</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="language">language</string>
    <string name="details">Details :</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="choose_شppropriate_time">Choose Appropriate Time</string>
    <string name="no_available_appointments">No Available Appointments</string>
    <string name="not_available">Not available</string>
    <string name="your_appointment">Your appoinmtent at :</string>
    <string name="submit_appointment">Submit appointment</string>
    <string name="scheduled_appointments">Your scheduled appointments</string>
    <string name="submit">Submit</string>
    <string name="your_schedual">Your Schedule</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="available_day">Available Day</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="select_date_to_show_appointments">Choose date to show your appointments:</string>
    <string name="show">Show</string>
    <string name="parent_name">Parent name</string>
    <string name="date_time">Appointment time</string>
    <string name="no_available_patients">No available patients</string>
    <string name="your_patients">Your patients</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="save">Save</string>
    <string name="chat">Chat</string>
</resources>