<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    tools:context=".trainer.ui.AddSchedule">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_schedule"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/available_day"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:textSize="14sp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/addScheduleDay"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_time"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:textSize="14sp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/addScheduleFrom"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:textSize="14sp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:id="@+id/addScheduleTo"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_submit_button"
        android:text="@string/create_schedule"
        android:id="@+id/addScheduleSubmit"
        android:gravity="center"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        />
</LinearLayout>