<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".trainer.ui.EditPatient">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientFirstName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientLastName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_name"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientChildName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chile_age"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientchildAge"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parent_job"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientParentJob"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/marriage_status"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientMarriageStatus"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/parent_gender"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientParentGender"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_number"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientChildNumber"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientTime"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientDay"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/child_main_problem"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="start"
        android:lines="4"
        android:inputType="text"
        android:background="@drawable/ic_edittext_border"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:id="@+id/editPatientMainProblem"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_submit_button"
        android:text="@string/save"
        android:id="@+id/editPatientSave"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        />
</LinearLayout>
</ScrollView>