<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/child_name"
            android:gravity="start|center"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/appointmentChildName"
            android:text="ali fadel"
            android:gravity="start|center"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:id="@+id/appointmentCancel"
            android:background="@color/transparent"
            android:src="@drawable/ic_close"
            android:gravity="start|center"
            android:visibility="visible"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/parent_name"
            android:gravity="start|center"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:id="@+id/appointmentParentName"
            android:text="ali fadel"
            android:gravity="start|center"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/transparent"
            android:src="@drawable/ic_close"
            android:gravity="start|center"
            android:visibility="invisible"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date_time"
            android:gravity="start|center"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="10-02-2021, 10:00 - 12:00"
            android:id="@+id/appointmentParentTime"
            android:gravity="start|center"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/transparent"
            android:src="@drawable/ic_close"
            android:gravity="start|center"
            android:visibility="invisible"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.05dp"
        android:background="@color/black"/>
</LinearLayout>